chromeos: removes NOTREACHED in client_image_registry

Having a NOTREACHED here is problematic for two reasons:
. A bad client could trigger the NOTREACHED by setting a random value.
. Because the registry is a separate pipe then that to the WindowService it
  is entirely possible for the property to be set on the window before the
  property has been set in the registry.

BUG=863520
TEST=none
TBR=estade@chromium.org

Change-Id: I08b047e871c39d46cfcd548b078df6af9e334032
Reviewed-on: https://chromium-review.googlesource.com/1136937
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#575045}
Former-commit-id: fe587230f593c4b67cc977807afdb9daa8f6c806